[tool.poetry]
name = "cart"
version = "0.1.1"
description = "tools for cartoseq"
authors = ["Yongha Hwang <yongha.hwang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "1.3"
geopandas = "^0.10.2"
PyYAML = "^6.0"
imutils = "^0.5.4"
opencv-contrib-python-headless = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
meta = 'cart.meta:main'
convert = 'cart.convert:main'
filter = 'cart.convert:filter'
